test/testFiles/pass/prolog_pass.fcl
BEGIN_PROLOG
x : 5
y : @local::x
END_PROLOG
